# cryptosweep

./: CLAUDE.md  Cargo.toml  README.md  config.sample.toml
src/: cbworker.rs  config.rs  explorer.rs  main.rs  orchestrator.rs  persistence.rs  types.rs
src/coinbase/: auth.rs  mod.rs  models.rs
src/notifier/: mod.rs
src/tests/: cassette.rs  coinbase_mock.rs  mod.rs
src/tests/fixtures/: coinbase_api_auth.cassette.json  coinbase_convert_usdc.cassette.json  coinbase_fetch_receives.cassette.json  coinbase_withdraw.cassette.json
